Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ section {
 }
 
 #color-scheme-selector {
-    margin: 1em;
+    padding: 1em;
+    width: fit-content;
 }
 
